--- a/1.0.0/src/tpl/directives/books.html
+++ b/1.0.0/src/tpl/directives/books.html
@@ -3,10 +3,11 @@
   <tr>
     <th>Title</th>
     <th>Author</th>
-    <th>DatePurchased</th>
+    <th>Purchased</th>
+    <th>Released</th>
     <th>Length</th>
     <th>Downloaded</th>
-    <th>Votes</th>
+    <th>Ratings</th>
     <th>Series</th>
   </tr>
   </thead>
@@ -23,15 +24,16 @@
       </a>
     </td>
     <td>
-      <a href="{{book.authorUrl}}">
+      <a href="/search?searchAuthor={{book.author}}">
         {{book.author}}
       </a>
     </td>
-    <td>{{book.datePurchased}}</td>
+    <td>{{book.datePurchased.toDate() | date:'medium'}}</td>
+    <td>{{book.dateReleased.toDate() | date:'medium'}}</td>
     <td>{{book.length}}</td>
     <td>{{book.downloaded}}</td>
-    <td>{{book.votes}}</td>
-    <td><a href="{{book.seriesUrl}}">view series</a></td>
+    <td>{{book.ratings}}</td>
+    <td><a href="{{book.seriesUrl}}">view series ({{book.seriesId}})</a></td>
   </tr>
   </tbody>
 </table>
