--- a/1.0.0/src/tpl/states/app.html
+++ b/1.0.0/src/tpl/states/app.html
@@ -12,7 +12,7 @@
       That is a total of <span class="badge">{{calcListenTime()}}</span> hours downloaded (and probably
       listened
       to!).
-      We found <span class="badge">{{data.books.length}}</span> books based on your authors.
+      Found <span class="badge">{{data.books.length}}</span> books based on your authors.
     </div>
   </div>
 
