--- a/1.0.0/src/tpl/directives/books.html
+++ b/1.0.0/src/tpl/directives/books.html
@@ -16,7 +16,7 @@
     <td>
       <a href="{{book.url}}">
         <div class="col-md-4">
-          <img src="{{book.thumbnailUrl}}">
+          <img ng-src="{{book.thumbnailUrl}}">
         </div>
         <div class="col-md-8">
           {{book.title}}
