--- a/1.0.0/src/tpl/directives/missing.html
+++ b/1.0.0/src/tpl/directives/missing.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default" ng-repeat="group in books">
   <div class="panel-heading">
     <h3 class="panel-title">
-      <img src="{{book.owned[0].thumbnailUrl}}">
+      <img ng-src="{{book.owned[0].thumbnailUrl}}">
       {{group.owned[0].author}} - {{group.owned[0].title}}
       <button class="btn btn-primary" ng-click="group.showAll = !group.showAll">
         <i class="fa fa-chevron-{{group.showAll ? 'down' : 'right'}}"></i>
