Group missing by author

--- a/1.0.0/src/tpl/directives/books.html
+++ b/1.0.0/src/tpl/directives/books.html
@@ -33,7 +33,7 @@
     <td>{{book.length}}</td>
     <td>{{book.downloaded}}</td>
     <td>{{book.ratings}}</td>
-    <td><a href="{{book.series.url}}">{{book.series.name}} ({{book.series.id}})</a></td>
+    <td><a href="{{book.series.url}}">{{book.series.name}} ({{book.seriesId}})</a></td>
   </tr>
   </tbody>
 </table>
