--- a/1.0.0/src/tpl/directives/missing.html
+++ b/1.0.0/src/tpl/directives/missing.html
@@ -2,7 +2,7 @@
   <div class="panel-heading">
     <h3 class="panel-title">
       <img ng-src="{{book.owned[0].thumbnailUrl}}">
-      {{group.owned[0].author}} - {{group.owned[0].title}}
+      {{group.key}}
       <button class="btn btn-primary" ng-click="group.showAll = !group.showAll">
         <i class="fa fa-chevron-{{group.showAll ? 'down' : 'right'}}"></i>
         See all {{group.missing.length}} books
