--- a/1.0.0/src/tpl/button.html
+++ b/1.0.0/src/tpl/button.html
@@ -12,7 +12,7 @@
 </style>
 <div class="audiblehero-button">
   <a href>
-    <img src="//eirikb.blob.core.windows.net/audiblehero/dev-eirik/img/logo128.png">
+    <img src="//eirikb.blob.core.windows.net/audiblehero/1.0.0/img/logo128.png">
     <span>AudibleHero!</span>
   </a>
 </div>
