--- a/1.0.0/src/tpl/directives/books.html
+++ b/1.0.0/src/tpl/directives/books.html
@@ -28,8 +28,8 @@
         {{book.author}}
       </a>
     </td>
-    <td>{{book.datePurchased.toDate() | date:'medium'}}</td>
-    <td>{{book.dateReleased.toDate() | date:'medium'}}</td>
+    <td>{{book.datePurchased.toDate() | date:'mediumDate'}}</td>
+    <td>{{book.dateReleased.toDate() | date:'mediumDate'}}</td>
     <td>{{book.length}}</td>
     <td>{{book.downloaded}}</td>
     <td>{{book.ratings}}</td>
