--- a/1.0.0/src/tpl/directives/missing.html
+++ b/1.0.0/src/tpl/directives/missing.html
@@ -1,13 +1,13 @@
 <div class="panel panel-default" ng-repeat="group in books">
   <div class="panel-heading">
-    <h3 class="panel-title">
-      <img ng-src="{{book.owned[0].thumbnailUrl}}">
+    <h2 class="panel-title">
+      <img ng-src="{{group.owned[0].thumbnailUrl}}">
       {{group.key}}
       <button class="btn btn-primary" ng-click="group.showAll = !group.showAll">
         <i class="fa fa-chevron-{{group.showAll ? 'down' : 'right'}}"></i>
         See all {{group.missing.length}} books
       </button>
-    </h3>
+    </h2>
   </div>
   <div class="panel-body">
     <div ng-show="group.showAll">
