--- a/1.0.0/src/tpl/directives/missing.html
+++ b/1.0.0/src/tpl/directives/missing.html
@@ -1,4 +1,16 @@
-<div class="panel panel-default" ng-repeat="group in books">
+<label>
+  <input type="checkbox" ng-model="showMissing" ng-init="showMissing = true">
+  Show mising books
+</label>
+<label>
+  <input type="checkbox" ng-model="showOwned">
+  Show purchased books
+</label>
+<label>
+  <input type="checkbox" ng-model="showIgnored">
+  Show ignored books
+</label>
+<div class="panel panel-default" ng-repeat="key in books">
   <div class="panel-heading">
     <h2 class="panel-title">
       <img ng-src="{{group.owned[0].thumbnailUrl}}">
@@ -11,7 +23,7 @@
   </div>
   <div class="panel-body">
     <div ng-show="group.showAll">
-      <div booktable books="group.missing"></div>
+      <div booktable books="value" show-missing="showMissing" show-owned="showOwned"></div>
     </div>
   </div>
 </div>
