--- a/1.0.0/src/tpl/states/app.html
+++ b/1.0.0/src/tpl/states/app.html
@@ -17,15 +17,14 @@
     </div>
   </div>
 
-
   <div class="row">
     <div class="col-md-12">
       <tabset ng-show="data">
-        <tab heading="Your library">
-          <div booktable books="owned"></div>
+        <tab heading="All books">
+          <div filter-control filter="filter" ng-init="filter.showOwned = true"></div>
+          <div booktable books="books" filter="filter"></div>
         </tab>
-        <tab heading="Missing books by Series">
-          <div missinglist books="series"></div>
+        <tab heading="Grouped by series">
         </tab>
         <!--<tab heading="Missing books by Authors">
           <div missinglist books="authors"></div>
