Sort by duration

--- a/1.0.0/src/tpl/directives/filter-control.html
+++ b/1.0.0/src/tpl/directives/filter-control.html
@@ -28,7 +28,7 @@
     <div class="btn-group">
       <label ng-click="filter.reverse = !filter.reverse" class="btn btn-default btn-sm" ng-model="filter.predicate" btn-radio="'series.number'">Series
         number</label>
-      <label ng-click="filter.reverse = !filter.reverse" class="btn btn-default btn-sm" ng-model="filter.predicate" btn-radio="'Hours'">Hours</label>
+      <label ng-click="filter.reverse = !filter.reverse" class="btn btn-default btn-sm" ng-model="filter.predicate" btn-radio="'duration'">Hours</label>
     </div>
     <label>
       <i class="fa" ng-class="{'fa-chevron-up': filter.reverse, 'fa-chevron-down': !filter.reverse}"></i>
