--- a/1.0.0/src/tpl/directives/books.html
+++ b/1.0.0/src/tpl/directives/books.html
@@ -1,8 +1,10 @@
-<div class="col-md-2" ng-repeat-start="book in books | filterBooks:filter | orderBy:filter.predicate:filter.reverse as filteredBooks"
+<div class="col-md-2"
+     ng-repeat-start="book in books | filterBooks:filter | orderBy:filter.predicate:filter.reverse as filteredBooks"
      ng-class="{owned: book.owned}">
   <a ng-href="{{book.url}}" class="thumbnail">
     <div ng-show="book.owned && filter.fadeOwned" class="overlay"></div>
-    <i ng-show="book.owned" class="fa fa-2x fa-check check text-success white-border"></i>
+    <i ng-show="book.owned" class="fa fa-2x fa-check check text-success white-border" title="Purchased"></i>
+    <i ng-show="book.ignored" class="fa fa-2x fa-eye-slash ignore white-border" title="Ignored"></i>
 
     <h1 ng-show="filter.showSeriesNumber">{{book.series.number}}</h1>
 
@@ -12,6 +14,11 @@
 
     <div class="caption">
       <h5><strong>{{book.title}}</strong>. {{book.duration.asHours() | number:2}} hours.</h5>
+      <button type="button" class="btn btn-default" ng-click="ignore($event, book)">
+        <span ng-show="book.ignored">Un-ignore</span>
+        <span ng-show="!book.ignored">Ignore</span>
+        book
+      </button>
     </div>
   </a>
 </div>
