--- a/1.0.0/src/tpl/index.html
+++ b/1.0.0/src/tpl/index.html
@@ -1,2 +1,2 @@
-<link rel="stylesheet" href="//eirikb.blob.core.windows.net/audiblehero/1.0.0/app.css">
+<link rel="stylesheet" href="//eirikb.blob.core.windows.net/audiblehero/dev-eirik/app.css">
 <div id="audiblehero" ng-app="audiblehero" ui-view></div>
