--- a/1.0.0/src/tpl/states/app.html
+++ b/1.0.0/src/tpl/states/app.html
@@ -2,6 +2,7 @@
   <hr>
   <h1>Welcome to AudibleHero!</h1>
   <label ng-show="loading">Loading...</label>
+  <label ng-show="!loading">Don't listen to them, we <i>read</i> books!</label>
 
   <div ng-if="data">
 
