"Grouped by author" tab title

--- a/1.0.0/src/tpl/states/app.html
+++ b/1.0.0/src/tpl/states/app.html
@@ -29,7 +29,7 @@
       <tab heading="Grouped by series" select="showBySeries = true" ng-if="true">
         <div ng-if="showBySeries" grouped="bySeries"></div>
       </tab>
-      <tab heading="Missing books by Authors" select="showByAuthor = true" ng-if="true">
+      <tab heading="Grouped by author" select="showByAuthor = true" ng-if="true">
         <div ng-if="showByAuthor" grouped="byAuthor"></div>
       </tab>
     </tabset>
