Default sort by 'title'

--- a/app/src/tpl/directives/filter-control.html
+++ b/app/src/tpl/directives/filter-control.html
@@ -33,6 +33,8 @@
     Sorting:
     <div class="btn-group">
       <label ng-click="filter.reverse = !filter.reverse" class="btn btn-default btn-sm" ng-model="filter.predicate"
+             btn-radio="'title'">Title</label>
+      <label ng-click="filter.reverse = !filter.reverse" class="btn btn-default btn-sm" ng-model="filter.predicate"
              btn-radio="'series.number'">Series
         number</label>
       <label ng-click="filter.reverse = !filter.reverse" class="btn btn-default btn-sm" ng-model="filter.predicate"
