Simplify app, base on 404-page

--- a/app/src/tpl/index.html
+++ b/app/src/tpl/index.html
@@ -1,2 +1,5 @@
-<link rel="stylesheet" href="//eirikb.blob.core.windows.net/audiblehero/dev-eirik/app.css">
-<div id="audiblehero" ng-app="audiblehero" ui-view></div>
+<link rel="stylesheet" href="http://localhost:8000/app.css">
+<div id="audiblehero">
+  <div ui-view></div>
+</div>
+
