--- a/app/src/tpl/states/load.html
+++ b/app/src/tpl/states/load.html
@@ -1,3 +1,7 @@
+<a href class="btn btn-default" ui-sref="app">
+  <i class="fa fa-home"></i>
+  Back
+</a>
 <div class="panel {{ active === -1 ? 'panel-primary' : 'panel-default'}}">
   <div class="panel-heading">
     <h3 class="panel-title">Start</h3>
